--- a/src/i18n/zh-tw.json
+++ b/src/i18n/zh-tw.json
@@ -79,11 +79,13 @@
     "passwordConfirm": "Password Confirmation",
     "submit": "D槽目錄",
     "submitD": "G槽目錄",
-    "createAnAccount": "Create an account",
-    "loginInstead": "Already have an account",
-    "passwordsDontMatch": "Passwords don't match",
-    "usernameTaken": "Username already taken",
-    "signup": "Signup",
+    "passwordConfirm": "確認密碼",
+    "submit": "登入",
+    "createAnAccount": "新建賬戶",
+    "loginInstead": "已有賬戶登錄",
+    "passwordsDontMatch": "密碼不匹配",
+    "usernameTaken": "用戶名已存在",
+    "signup": "註冊",
     "username": "帳號",
     "wrongCredentials": "帳號或密碼錯誤"
   },
