Search 結果改成 lisiting 並加入 download按鈕(JIM), 登入選擇硬碟(Bill)

--- a/src/i18n/zh-tw.json
+++ b/src/i18n/zh-tw.json
@@ -77,8 +77,7 @@
   "login": {
     "password": "密碼",
     "passwordConfirm": "Password Confirmation",
-    "submit": "D槽目錄",
-    "submitD": "G槽目錄",
+    "submit": "登入",
     "passwordConfirm": "確認密碼",
     "createAnAccount": "新建賬戶",
     "loginInstead": "已有賬戶登錄",
